# breakout

./: .gitignore  CMakeLists.txt
components/: Components.h
include/: Entity.h  Game.h
include/Scene/: Scene.h
include/Systems/: BallSystem.h  PaddleSystem.h  System.h
src/: Game.cpp  main.cpp
src/Scene/: Scene.cpp
